# lingo-core

./: .env.example  .gitignore  .python-version  :memory:  CLAUDE.md  INPROGRESS.md  Makefile  README.md  WORKTREE_REPORT.md  package-lock.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: config.py  handler.py  main.py  package-lock.json
app/admin/: __init__.py  audit_router.py  ban_router.py  impersonate_router.py  lms_router.py  router.py  social_router.py  xp_router.py
app/ads/: router.py  schemas.py
app/auth/: ban.py  dependencies.py  internal_token.py  roles.py  schemas.py
app/community/: __init__.py  router.py  schemas.py
app/db/: community_dynamo.py  community_protocols.py  deck_sqlite.py  (+8 more)
docs/: ARCHITECTURE_REVIEW.md  TTS.md  cosmetics-design-2026-05-25.md  leagues-design-2026-05-25.md  xp-curve-design-2026-05-25.md
scripts/: build-zip.sh  seed.py
test_decks/: README.md  es-course-vocab.json  es-course.json  ja-beginner.json  ja-course-vocab.json  ja-hiragana-curriculum.json  ja-keita-dialogue.json  ja-nanami-dialogue.json  ja-vowels-lesson.json  jlpt-n5-vocab.json  k-drama-phrases.json  ko-beginner.json  ko-course-vocab.json  ko-curriculum.json  korean-particles-master.json
tests/: conftest.py  test_admin.py  test_admin_audit.py  test_admin_award_xp.py  test_admin_ban.py  test_admin_impersonate.py  test_admin_social.py  test_admin_stats.py  test_ads_router.py  test_api_error.py  test_api_error_sad_paths.py  test_audit_dynamo.py  test_auth.py  test_community.py  test_community_dynamo.py  test_config.py  test_decks.py  test_decks_votes_dynamo.py  test_dynamo_conformance.py  test_internal_service.py  test_internal_token_resolver.py  test_leaderboard_dynamo.py  test_leaderboard_xp_award.py  test_platform_settings.py  test_platform_settings_dynamo.py  test_progress.py  test_progress_dynamo.py  test_progress_unlocks.py  test_provider.py  test_quests.py  test_quests_claim_race.py  test_quests_dynamo.py  test_quests_internal.py  test_quests_reset.py  test_quests_sqlite_repo.py  test_smoke.py  test_social.py  test_srs.py  test_srs_dynamo.py  test_srs_sync.py  (+9 more)
(+111 files in other folders)
