[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "lingo-core"
version = "0.1.0"
description = "Core API for Open Lingo — user management, progress tracking, course library."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.28",
    "aiosqlite>=0.20",
    "aioboto3>=13",
    "boto3>=1.35",
    "mangum>=0.18",
    # kombu — transport abstraction for the async-events publisher.
    # `EVENTS_BROKER_URL=sqs://...` in prod, `redis://localhost:6379/0` in
    # local dev. One publish() path, one broker config — lingo-async picks
    # up either via the kombu consumer or the SQS event source mapping.
    "kombu>=5.4",
    "redis>=5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py313"
line-length = 200
# Scripts are utility tooling (TTS pipeline, audits, seeders) — not
# the app surface CI should police. They run by hand on the maintainer's
# machine, not on Lambda.
extend-exclude = ["scripts/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
